Feature: add endpoint for receiving block messages
